// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should leave other apis untouched 1`] = `
"
import Taro from '@tarojs/taro-h5';
Taro.noop;"
`;

exports[`should move static apis under "Taro" 1`] = `
"
import Taro from '@tarojs/taro-h5';
Taro.noop;
Taro.noop();"
`;

exports[`should not go wrong when using an api twice 1`] = `
"
import Taro, { createAnimation as _createAnimation } from '@tarojs/taro-h5';
const animation = _createAnimation({
  duration: dura * 1000,
  timingFunction: 'linear'
});
const resetAnimation = _createAnimation({
  duration: 0,
  timingFunction: 'linear'
});"
`;

exports[`should not import taro duplicatly 1`] = `
"
import Taro, { createAnimation as _createAnimation } from \\"@tarojs/taro-h5\\";

Taro.Component;
_createAnimation();
Taro.initPxTransform();"
`;

exports[`should preserve assignments in lefthands 1`] = `
"
import Taro, { createAnimation as _createAnimation, request as _request } from '@tarojs/taro-h5';
let animation;
animation = _createAnimation({
  transformOrigin: \\"50% 50%\\",
  duration: 1000,
  timingFunction: \\"ease\\",
  delay: 0
});
_request();
Taro.request = '';
Taro['request'] = '';"
`;

exports[`should preserve default imports 1`] = `
"
import Taro from '@tarojs/taro-h5';
console.log(Taro);"
`;

exports[`should support rename of imported names 1`] = `
"
// import { inject as mobxInject, observer as mobxObserver } from '@tarojs/mobx'
import Taro from \\"@tarojs/taro-h5\\";
export class Connected extends Taro.Component {}"
`;

exports[`should work! 1`] = `
"
import Taro, { setStorage as _setStorage, getStorage as _getStorage } from '@tarojs/taro-h5';
Taro.initPxTransform(Taro.param);
Taro.initPxTransform();
Taro.initPxTransform();
_getStorage();
_setStorage();
export { Taro };"
`;
